--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <h2>7. Contact Us</h2>
     <p>If you have any questions or concerns about this Privacy Policy, please contact us at: <br>
-    <a href="mailto:your-email@example.com">your-email@example.com</a>
+    <a href="mailto:sangibruse@gmail.com">sangibruse@gmail.com</a>
     </p>
 
 </body>
